# zoom_bot

./: Dockerfile  LICENSE  README.md
.github/workflows/: e2e-tests.yml  unit-tests.yml
zoom_bot/: pyproject.toml
zoom_bot/src/zoom_bot/: app.py  bot.py
zoom_bot/src/zoom_bot/infrastructure/: logging.py
zoom_bot/tests/e2e/: test_css_selectors.py
zoom_bot/tests/unit/: test_zoombot.py
