[project]
name = "zoom-bot"
version = "0.1.0"
description = ""
authors = [
    {name = "Andrei",email = "raducanuandrei31@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "selenium (>=4.30.0,<5.0.0)",
    "undetected-chromedriver (>=3.5.5,<4.0.0)",
    "setuptools (>=78.0.2,<79.0.0)",
    "pytest (>=8.3.5,<9.0.0)"
]

[tool.poetry]
packages = [{include = "zoom_bot", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
